@@ -1,3 +1,9 @@
+Wed Aug 13 18:41:27 2014  Jiri (George) Lebl <jirka@5z.com>
+
+	* src/graphing.c: fix using a single point in LinePlotDrawPoints if
+	  using a matrix of points.  Also allow null matrix in
+	  LinePlotDrawPoints and LinePlotDrawLine which makes it a no-op
+
 Wed Aug 13 17:06:29 2014  Jiri (George) Lebl <jirka@5z.com>
 
 	 * gtkextra/gtkplotdata.c: Fix drawing data with no connector, then
